# ISP_IND_PROG

./: README.md
Task2/: CMakeLists.txt  Doxyfile  HamletSorter  HamletSorterDebug  Makefile  MyQuickSort.c  MyQuickSort.h  Output.c  Output.h  README.md  Sorter.c  Sorter.h  StructureCreator.c  StructureCreator.h  TestTextSorter.c  TestTextSorter.h  Tests.c  Tests.h  TextSorter.c  TextSorter.h  main.c
Task2/docs/html/: Output_8c.html  Output_8c__incl.map  Output_8c__incl.md5  Output_8h.html  Output_8h__dep__incl.map  Output_8h__dep__incl.md5  Output_8h__incl.map  Output_8h__incl.md5  Output_8h_source.html  Sorter_8c.html  Sorter_8c__incl.map  Sorter_8c__incl.md5  Sorter_8h.html  Sorter_8h__dep__incl.map  Sorter_8h__dep__incl.md5  Sorter_8h__incl.map  Sorter_8h__incl.md5  Sorter_8h_source.html  StructureCreator_8c.html  StructureCreator_8c__incl.map  StructureCreator_8c__incl.md5  StructureCreator_8h.html  StructureCreator_8h__dep__incl.map  StructureCreator_8h__dep__incl.md5  StructureCreator_8h__incl.map  StructureCreator_8h__incl.md5  StructureCreator_8h_source.html  Tests_8c.html  Tests_8c__incl.map  Tests_8c__incl.md5  Tests_8h.html  Tests_8h__dep__incl.map  Tests_8h__dep__incl.md5  Tests_8h__incl.map  Tests_8h__incl.md5  Tests_8h_source.html  annotated.html  classes.html  files.html  globals.html  (+14 more)
Task2/docs/latex/: Output_8c.tex  Output_8c__incl.md5  (+27 more)
Task2/src/: CMakeLists.txt  Main.c  Output.c  Output.h  RunTests.c  Sorter.c  Sorter.h  StructureCreator.c  StructureCreator.h  Tests.c  Tests.h  main.c
Task2/textfiles/: rhymed_hamlet.txt  sorted_hamlet.txt
(+89 files in other folders)
